# StayFocused

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: FindRequiredSystemLibraries.cmake
media/: activated.xcf  icon.xcf  resources.qrc
src/: CMakeFileListing.txt  CMakeLists.txt  activehwndtracker.cpp  activehwndtracker.h  entrypoint.cpp  flags.h  flagsmenu.cpp  flagsmenu.h  flagspanel.h  hook.cpp  hook.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  processlist.cpp  processlist.h  showbox.cpp  showbox.h  showbox.ui  stayfocus.cpp  stayfocus.h  styledef.cpp  styledef.h  trayicon.cpp  trayicon.h  version.cpp  version.h  versiondefs.h  winapi.cpp  winapi.h  window.cpp  window.h  windowflags.cpp  windowflags.h  windowflagsbox.cpp  windowflagsbox.h  windowflagsbox.ui  windows.rc
